# nord-pool-predictor

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  docker-ci.yml  frontend-ci.yml  release.yml
backend/: .dockerignore  .env.example  Dockerfile  areas.yaml  pyproject.toml  ruff.toml
backend/migrations/: 001_initial.sql  002_15min_resolution.sql
backend/src/nordpool_predictor/: bootstrap_state.py  config.py  database.py  tariffs.py
backend/src/nordpool_predictor/api/: app.py
backend/src/nordpool_predictor/api/routers/: areas.py  forecasts.py  health.py  homeassistant.py  jobs.py  models.py  prices.py  tariffs.py
backend/src/nordpool_predictor/api/schemas/: forecasts.py  health.py  models.py  prices.py  tariffs.py
backend/src/nordpool_predictor/ingestion/: crossborder.py  eds_client.py  prices.py  production.py  weather.py
backend/src/nordpool_predictor/ml/: features.py  predict.py  score.py  train.py
backend/src/nordpool_predictor/scheduler/: jobs.py
backend/tests/: conftest.py  test_api.py  test_features.py  test_ingestion.py  test_tariffs.py
web/: .env.example  Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: error.tsx  globals.css  layout.tsx  page.tsx
web/components/: accuracy-card.tsx  area-charts.tsx  area-switcher.tsx  benchmark-table.tsx  chart-skeleton.tsx  dashboard-content.tsx  disclaimer-banner.tsx  forecast-chart.tsx  forecast-evolution-chart.tsx  forecast-info-bar.tsx  grid-company-selector.tsx  job-status.tsx  (+4 more)
(+4 files in other folders)
