[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nordpool-predictor"
version = "0.1.0"
description = "Nord Pool electricity price forecasting API"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "lightgbm>=4.5.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10,<4",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0",
    "joblib>=1.4.0",
    "holidays>=0.62",
    "optuna>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "time-machine>=2.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nordpool_predictor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/nordpool_predictor/ml/*.py" = ["N803", "N806"]
